connect the api

--- a/src/app/component/signup/signup.component.html
+++ b/src/app/component/signup/signup.component.html
@@ -15,57 +15,72 @@
                 <div class="signup-content">
                     <form  id="signup-form" class="signup-form" (ngSubmit)="signup(signupForm.value)" #signupForm="ngForm">
                         <h2 class="form-title" data-i18n="createaccount">{{getTranslation('CREATACCOUNT')}}</h2>
+                        <div [ngClass]="{'success-class': success, 'error-class': !success}" >
+                            {{DemoResponse}}
+                        </div>
                         <div class=" row">
                             <div class="form-group col-6">
-                                <input type="text" #biusinessArabe="ngModel" class="form-input" name="BiusinessArabe" ngModel required id="BiusinessArabe" [placeholder]="getBARPlaceHolder()"/>
-                                <div *ngIf="biusinessArabe.touched && biusinessArabe.invalid" class="text-danger">
-                                    <div *ngIf="biusinessArabe.errors?.['required']">Email is required</div>
+                                <input type="text" #companyNameAr="ngModel" class="form-input" name="companyNameAr" ngModel required id="companyNameAr" [placeholder]="getBARPlaceHolder()"/>
+                                <div *ngIf="companyNameAr.touched && companyNameAr.invalid" class="text-danger">
+                                    <div *ngIf="companyNameAr.errors?.['required']">Email is required</div>
                                   </div>
                             </div>
                             <div class="form-group col-6">
-                                <input type="text" class="form-input" #BiusinessEnglish="ngModel" name="BiusinessEnglish" ngModel required id="BiusinessEnglish" [placeholder]="getBENPlaceHolder()"/>
-                                <div *ngIf="BiusinessEnglish.touched && BiusinessEnglish.invalid" class="text-danger">
-                                    <div *ngIf="BiusinessEnglish.errors?.['required']">Email is required</div>
+                                <input type="text" class="form-input" #companyNameEn="ngModel" name="companyNameEn" ngModel required id="companyNameEn" [placeholder]="getBENPlaceHolder()"/>
+                                <div *ngIf="companyNameEn.touched && companyNameEn.invalid" class="text-danger">
+                                    <div *ngIf="companyNameEn.errors?.['required']">Email is required</div>
                                   </div>
                             </div>
                         </div>
                         <div class=" row">
                             <div class="form-group col-6">
-                                <input type="text" class="form-input" name="FullNameArabe" ngModel required id="FullNameArabe" [placeholder]="getFullARPlaceHolder()"/>
+                                <input type="text" class="form-input" #ownerNameAr="ngModel" name="ownerNameAr" ngModel required id="ownerNameAr" [placeholder]="getFullARPlaceHolder()"/>
                             </div>
                             <div class="form-group col-6">
-                                <input type="text" class="form-input" name="FullNameEnglish" ngModel required id="FullNameEnglish" [placeholder]="getFullENPlaceHolder()"/>
-                            </div>
-                        </div>
-                        <div class=" row">
-                            <div class="form-group col-6">
-                                <input type="email" class="form-input" name="email" id="email" ngModel required [placeholder]="getEmailPlaceHolder()"/>
-                            </div>
-                            <div class="form-group col-6">
-                                <input type="number" class="form-input" name="phone" id="phone" ngModel required [placeholder]="getPhonePlaceHolder()"/>
+                                <input type="text" class="form-input" #ownerNameEn="ngModel" name="ownerNameEn" ngModel required id="ownerNameEn" [placeholder]="getFullENPlaceHolder()"/>
                             </div>
                         </div>
                         <div class=" row">
                             <div class="form-group col-6">
-                                <input type="text" class="form-input" name="country" id="country" ngModel required [placeholder]="getCountryPlaceHolder()"/>
+                                <input type="email" class="form-input" #ownerEmail="ngModel" name="ownerEmail" id="ownerEmail" ngModel required [placeholder]="getEmailPlaceHolder()"/>
                             </div>
                             <div class="form-group col-6">
-                                <input type="text" class="form-input" name="city" id="city" ngModel required [placeholder]="getCityPlaceHolder()"/>
+                                <input type="number" class="form-input" #ownerMobile="ngModel" name="ownerMobile" id="ownerMobile" ngModel required [placeholder]="getPhonePlaceHolder()"/>
+                            </div>
+                        </div>
+                        <div class=" row">
+                            <div class="form-group col-6">
+                                <select class="form-select"   name="city" id="city" [(ngModel)]="selectedArea" (change)="onAreaChange()" required>
+                                    <option value="">{{getCountryPlaceHolder()}}</option>
+                                    <option *ngFor="let area of areas" [ngValue]="area">{{ area.name }}</option>
+                                </select>
+                            </div>
+                            <div class="form-group col-6">
+                                <select class="form-select"  name="zone" id="zone" [(ngModel)]="selectedCity" required>
+                                    <option value="">{{getCityPlaceHolder()}}</option>
+                                    <option *ngFor="let city of cities" >{{ city.name }}</option>
+                                </select>
                             </div>
                         </div>
                         <div class="row">
-                            <div class="form-group col-6">
-                                <input type="text" class="form-input" name="password" ngModel required id="password" [placeholder]="getPasswordPlaceHolder()" maxlength="14" minlength="7"/>
+                            <div class="form-group col">
+                                <input type="password" class="form-input" #password="ngModel" minlength="7" maxlength="14"
+                                pattern="^(?=.*[a-z])(?=.*[A-Z])(?=.*\d)(?=.*[@$!%*?&])[A-Za-z\d@$!%*?&]{7,14}$" name="password" ngModel required id="password" [placeholder]="getPasswordPlaceHolder()" maxlength="14" minlength="7"/>
                                 <span toggle="#password" class="zmdi zmdi-eye field-icon toggle-password"></span>
+                                <div *ngIf="password.invalid && (password.dirty || password.touched)" class="text-danger">
+                                    <div *ngIf="password.errors?.['required']">Password is required.</div>
+                                    <div *ngIf="password.errors?.['minlength'] || password.errors?.['maxlength']">Password must be between 7 and 14 characters long.</div>
+                                    <div *ngIf="password.errors?.['pattern']">Password must include at least one uppercase letter, one lowercase letter, one digit, and one special character.</div>
+                                  </div>
                             </div>
-                            <div class="form-group col-6">
-                                <input type="password" class="form-input" ngModel required name="re_password" id="re_password" [placeholder]="getRePasswordPlaceHolder()" minlength="7" maxlength="14" />
-                            </div>
+                            
                         </div>
                         
                         <div class="form-group">
-                            <input type="checkbox" ngModel  name="agree-term" id="agree-term" class=""/>
-                            <label for="agree-term" class="label-agree-term " data-i18n="terms"><a a href="#" class="term-service" data-bs-toggle="modal" data-bs-target="#exampleModal">{{getTranslation('IAGREE')}}</a></label>
+                            <input type="checkbox" [(ngModel)]="agreeTerm" name="agree-term" id="agree-term" class="form-check-input" style="border-radius: 2px; border-color: black; margin-top: 5px;margin-top: 5px;"/>
+                            <label for="agree-term" class="form-check-label label-agree-term" data-i18n="terms">
+                                <a href="#" [ngClass]="{'conditionArabe': selectedLanguage === 'ar'}" class="term-service" data-bs-toggle="modal" data-bs-target="#exampleModal">{{ getTranslation('IAGREE') }}</a>
+                            </label>
                         </div>
                         
                         <div class="form-group">
@@ -91,12 +106,11 @@
               <h5 class="modal-title" id="exampleModalLabel">Modal title</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
-              ...
+            <div class="modal-body" *ngFor="let cnd of condition">
+              {{cnd}}
             </div>
             <div class="modal-footer">
-              <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-              <button type="button" class="btn btn-primary">Save changes</button>
+              <button type="button" class="btn btn-primary" data-bs-dismiss="modal">Close</button>
             </div>
           </div>
         </div>
