--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -19,9 +19,9 @@
                                 
                         
                                 <div class="form-group">
-                                    <input type="text" class="form-input form-control" name="loginInput" id="loginInput" #loginInput="ngModel" ngModel required  [placeholder]="getEmailPlaceholderText()"/>
-                                    <div class="alert" *ngIf="loginInput.invalid && (loginInput.dirty || loginInput.touched)">
-                                        <div *ngIf="loginInput.errors?.['required']">loginInput is required.</div>
+                                    <input type="text" class="form-input form-control" name="username" id="username" #username="ngModel" ngModel required  [placeholder]="getEmailPlaceholderText()"/>
+                                    <div class="alert" *ngIf="username.invalid && (username.dirty || username.touched)">
+                                        <div *ngIf="username.errors?.['required']">loginInput is required.</div>
                                     </div>
                                 </div>
                     
