--- a/src/app/component/signup/signup.component.css
+++ b/src/app/component/signup/signup.component.css
@@ -278,23 +278,21 @@ display-flex, .display-flex, .display-flex-center {
     background-image: linear-gradient(to left, #74ebd5, #9face6); }
   
   input[type=checkbox]:not(old) {
-    width: 2em;
     margin: 0;
     padding: 0;
     font-size: 1em;
-    display: none; }
+    display: inline; }
   
   input[type=checkbox]:not(old) + label {
     display: inline-block;
-    margin-top: 7px;
-    margin-bottom: 25px; }
+     }
   
   input[type=checkbox]:not(old) + label > span {
     display: inline-block;
     width: 13px;
     height: 13px;
     margin-right: 15px;
-    margin-bottom: 3px;
+    
     border: 1px solid #ebebeb;
     border-radius: 2px;
     -moz-border-radius: 2px;
@@ -360,6 +358,31 @@ display-flex, .display-flex, .display-flex-center {
   @media screen and (max-width: 480px) {
     .signup-content {
       padding: 50px 25px; } }
+
+      .conditionArabe{
+        margin-right: 20px;
+      }
   
   /*# sourceMappingURL=style.css.map */
+
+  .success-class{
+    background-color: rgb(11, 193, 11);
+    color: white;
+    position: relative;
+    font-size: 25px;
+    font-weight: bold;
+    align-items: center;
+    padding-left: 15%;
+    margin-top: 2px;
+}
+.error-class{
+    background-color: red;
+    color: white;
+    position: relative;
+    font-size: 25px;
+    font-weight: bold;
+    align-items: center;
+    padding-left: 15%;
+    margin-top: 2px;
+}
   
