--- a/src/app/component/signup/signup.component.css
+++ b/src/app/component/signup/signup.component.css
@@ -369,20 +369,34 @@ display-flex, .display-flex, .display-flex-center {
     background-color: rgb(11, 193, 11);
     color: white;
     position: relative;
-    font-size: 25px;
+    font-size: 15px;
     font-weight: bold;
     align-items: center;
     padding-left: 15%;
-    margin-top: 2px;
+    margin-top: 1px;
+    margin-bottom: 15px;
+}
+
+.validation-class{
+  background-color: rgb(214, 208, 208);
+  color: black;
+  position: relative;
+  font-size: 15px;
+  font-weight: bold;
+  align-items: center;
+  padding-left: 15%;
+  margin-top: 1px;
+  margin-bottom: 15px;
 }
 .error-class{
     background-color: red;
     color: white;
     position: relative;
-    font-size: 25px;
+    font-size: 15px;
     font-weight: bold;
     align-items: center;
     padding-left: 15%;
-    margin-top: 2px;
+    margin-top: 1px;
+    margin-bottom: 15px;
 }
   
