--- a/src/app/main-ejarat/main-ejarat.component.html
+++ b/src/app/main-ejarat/main-ejarat.component.html
@@ -16,6 +16,7 @@
                         </button>
                         <div class="collapse navbar-collapse" id="navbar">
                             <ul class="navbar-nav mx-auto mb-2 mb-lg-0" [ngClass]="{'enNav':selectedLanguage=='ar'}">
+                                <li><a [routerLink]="" fragment="aboutUs" (click)="scrollToElement('aboutUs')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">Home</a></li>
                                 <li><a [routerLink]="" fragment="aboutUs" (click)="scrollToElement('aboutUs')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('FEATURE')}}</a></li>
                                 <li><a [routerLink]="" fragment="price-table" (click)="scrollToElement('price-table')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('PRICING')}}</a></li>
                                 <li><a [routerLink]="" fragment="contact" (click)="scrollToElement('contact')"  id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('CONTACT')}}</a></li>
@@ -53,13 +54,16 @@
                          </nav>-->
                          
      
-             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold my-5 smallHead mt-5" data-i18n="head" style="font-weight: bold;">
+             <h1 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold  smallHead mt-5" data-i18n="head" style="font-weight: bold; color: black;">
                 {{getTranslation('HEAD')}}
-             </h1>
-             <p data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" data-i18n="description" style="font-weight: bold;">
+             </h1><br>
+             <h2 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="display-3 text-white font-weight-bold  smallHead " data-i18n="head" style="font-weight: bold; color: black;">
+                {{getTranslation('SUBHEAD')}}
+             </h2>
+             <h3 data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class="lead text-white my-4" data-i18n="description" style="font-weight: bold; color: black;">
                 {{getTranslation('DESCRIPTION')}}
                 
-             </p>
+             </h3>
              <a href="#" id="green_btn" data-aos="fade" data-aos-easing="linear" data-aos-duration="1000" data-aos-once="true" class=" btn my-4 font-weight-bold atlas-cta" type="button" data-bs-toggle="modal" data-bs-target="#exampleModal" style="font-weight: bold;">{{getTranslation('STARTBTN')}}</a>
          </div>
      </div>
