add the lang to signup and login

--- a/src/app/component/login/login.component.html
+++ b/src/app/component/login/login.component.html
@@ -1,4 +1,4 @@
-    <div class="body" [ngClass]="{'rtl': selectedLanguage === 'ar'}">
+    <div class="body" [ngClass]="{'rtl': selectedLanguage === 'ar'}" id="body">
         <div class="row flex-row mb-2" style="margin: 0px;">
             
             <div class="col mr-auto" >
