correct the api

--- a/src/app/component/login/login.component.css
+++ b/src/app/component/login/login.component.css
@@ -136,7 +136,7 @@ display-flex, .display-flex, .display-flex-center {
   .clear {
     clear: both; }
   
-  #body {
+  .Coverbody {
     font-size: 14px;
     line-height: 1.8;
     color: #222;
