--- a/src/app/main-ejarat/main-ejarat.component.html
+++ b/src/app/main-ejarat/main-ejarat.component.html
@@ -11,12 +11,12 @@
             <div class="col-8">
                 <nav class="navbar navbar-expand-lg navbar-light ">
                     <div class="container-fluid">
-                        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbar" aria-controls="navbar" aria-expanded="f" aria-label="Toggle navigation" style="border-color:#00FFAD ;  border-width: 3px;">
+                        <button class="navbar-toggler" type="button"  data-toggle="collapse" data-target="#navbarItem" aria-controls="navbarItem" aria-expanded="false" aria-label="Toggle navigation" style="border-color:#00FFAD ;  border-width: 3px;">
                             <span class="navbar-toggler-icon"></span>
-                        </button>
-                        <div class="collapse navbar-collapse" id="navbar">
+                          </button>
+                        <div class="collapse navbar-collapse" id="navbarItem">
                             <ul class="navbar-nav mx-auto mb-2 mb-lg-0" [ngClass]="{'enNav':selectedLanguage=='ar'}">
-                                <li><a [routerLink]="" fragment="aboutUs" (click)="scrollToElement('aboutUs')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">Home</a></li>
+                                <li><a [routerLink]="" fragment="aboutUs" (click)="scrollToElement('home')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">Home</a></li>
                                 <li><a [routerLink]="" fragment="aboutUs" (click)="scrollToElement('aboutUs')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('FEATURE')}}</a></li>
                                 <li><a [routerLink]="" fragment="price-table" (click)="scrollToElement('price-table')" id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('PRICING')}}</a></li>
                                 <li><a [routerLink]="" fragment="contact" (click)="scrollToElement('contact')"  id="nav_btn" class="btn me-4 navBtn nav-item" aria-current="page" style="font-weight: bold;">{{getTranslation('CONTACT')}}</a></li>
